2010-01-11  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/*Vector.h: operator[] now throws index out of bounds
	exception when needed (FR#770)
	* src/*Vector.cpp: same

	* src/Rcpp/Environment.h: operator[](string) for environment
	allowing to get/set values of a binding in this environment.
	The Environment::Binding class has been created to act as
	a proxy.
	* src/Environment.cpp: idem
	* inst/unitTests/runit.environments.R: unit tests for the above

2010-01-10  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/Pairlist.h: operator[] for pairlist using proxies
	* src/Pairlist.cpp : idem
	* inst/unitTests/runit.Pairlist.R: new unit tests

	* src/Rcpp/Language.h: same for Language
	* src/Language.cpp : idem
	* inst/unitTests/runit.Language.R: new unit tests

	* inst/unitTests/runit.Function.R: added unit test for function
	throwing exceptions

	* src/Function.cpp: grab the condition message and not the call

2010-01-09  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/RObject.h: attr can now be used to get or set the
	attribute (used to be read only). This is another manifestation
	of the proxy pattern. The rhs can be anything wrap can handle

	* inst/unitTests/runit.RObject.R: added test.RObject.attr.set
	unit test (setting attribute).

	* src/Rcpp/Function.h: Function::operator() now throws an
	exception if an R error occurs.

2010-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* configure.in: provide basic support for c++ compiler version detection
 	  at build-time so that we can add -std=c++0x when applicable;
	  provide defaults in case we do not use g++
	* src/Makevars.in: copied from Makevars, set C++ flags from configure
	* configure.win: simply log what g++ version is being used

2010-01-08  Romain Francois <francoisromain@free.fr>

	* src/Rcpp/wrap.h: added wrap( size_t ) to disambiguate it

	* int/unitTests/runit.XPTr.R: forgot to set the finalizer on the
	external pointer

	* src/Rcpp/Pairlist.h: Pairlist gains a push_back, replace,